touch事件转化为mouse事件相对位置处理

--- a/src/index.axml
+++ b/src/index.axml
@@ -1,7 +1,7 @@
 <mouseable-view
   onMousemove="mouseMove"
-  onMousedown="mouseDown"
   onMouseup="mouseUp"
+  id="f2-canvas-wrapper"
   relative
 >
 <canvas
